Fixed scrollbar

--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body {
   background: url("background-image.jpg") no-repeat center center fixed;
   background-size: cover;
   font-family: "Raleway", sans-serif;
+  margin: 0;
 }
 
 .container {
